Forgot to switch branches to make this change, but I addressed issue #11 and fixes the stretching of user's profile images. It now centers and crops profile photo's. This has a kind of weird affect on your profile image since your face wasn't centered in the photo - I think for most users this won't cause a problem.

--- a/app/assets/stylesheets/_boiler.css.scss
+++ b/app/assets/stylesheets/_boiler.css.scss
@@ -26,6 +26,13 @@ $line-height: 1.4em;
   padding: 10px;
 }
 
+/* Crop image into square */
+
+@mixin crop-image-square ( $size: 80px ) {
+    width: $size;  // change to desired width.
+    height: $size; // change to desired height.
+    background-position: center center;
+}​
 
 /* Flash */
 
