--- a/app/assets/stylesheets/posts.css.scss
+++ b/app/assets/stylesheets/posts.css.scss
@@ -264,12 +264,12 @@ textarea, input, section { outline: none; }
 
 .userWidget {
   margin-top: 60px;
-  img {
-    width: 80px;
-    height: 80px;
+
+  div.user-profile-image {
+    @include crop-image-square(80px);
     float: left;
     margin: 0px 10px 0px 0px;
-    border-radius: 3px;
+    border-radius: $radius;
   }
 
   h4 {
